--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,10 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = []
+dependencies = [
+    "dvc>=3.66.1",
+    "numpy<2",
+    "scikit-learn>=1.8.0",
+    "torch==2.2.2",
+    "torchvision>=0.17.2",
+]
