--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "dvc>=3.66.1",
     "numpy<2",
+    "pyyaml>=6.0.3",
     "scikit-learn>=1.8.0",
     "torch==2.2.2",
     "torchvision>=0.17.2",
