--- a/params.yaml
+++ b/params.yaml
@@ -6,9 +6,9 @@ data:
 
 train: 
   epochs: 10
-  batch_size: 256
-  lr: 0.001
+  batch_size: 128
+  lr: 0.0005
 
 run:
-  name: exp3_big_hatch
+  name: exp2_low_lr_more_epochs
   out_dir: runs
